<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Students.Home.CorredpondentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_back_btn"
            app:titleTextColor="@color/white"
            android:background="@color/bluecolor"
            tools:ignore="MissingConstraints" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/pec_corredpondent"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/corredpondentName"
            android:textColor="@color/bluecolor"
            android:textSize="22dp"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Correspondent"
            android:textColor="@color/red"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/correspondent1"
            android:justificationMode="inter_word"
            android:textColor="#808080"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:text="@string/correspondent2"
            android:justificationMode="inter_word"
            android:textColor="#808080"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>