<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Students.Department.CIVILActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:title="CSE"
            app:navigationIcon="@drawable/ic_back_btn"
            app:titleTextColor="@color/white"
            android:background="@color/bluecolor"
            tools:ignore="MissingConstraints" />
        <com.smarteist.autoimageslider.SliderLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/Civilslider"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About The  Civil Engineering "
            android:layout_marginTop="20dp"
            android:textColor="@color/bluecolor"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/civil1"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:justificationMode="inter_word"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/civil2"
            android:textColor="#808080"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/civil3"
            android:textColor="#808080"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:justificationMode="inter_word"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/civil4"
            android:textColor="#808080"
            android:justificationMode="inter_word"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="STAFFS"
                android:textColorLink="@color/red"
                android:textColor="@color/red"
                android:layout_gravity="center"
                android:gravity="center"

                android:justificationMode="inter_word"
                android:textSize="20sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/MCARecyclerView"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/MCANoData">
                    <include layout="@layout/no_data_found_faculty"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>